add mantine data table

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mantine/notifications": "^8.2.4",
     "@prisma/client": "^6.13.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "mantine-datatable": "^8.2.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
