--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "es-toolkit": "^1.39.10",
     "mantine-datatable": "^8.2.0",
     "next": "15.4.6",
     "react": "19.1.0",
